--- a/content/Exam2.html
+++ b/content/Exam2.html
@@ -225,13 +225,17 @@ img.add_border {
 <hr class="" data-end="1441" data-start="1438"/>
 <p>控制器設定</p>
 <ul data-end="1502" data-start="1453">
+<ul data-end="1502" data-start="1453">
+<ul data-end="1502" data-start="1453">
 <li class="" data-end="1502" data-start="1453">
 <p class="" data-end="1502" data-start="1455">指定使用的控制器為 <code data-end="1485" data-start="1465">fourbar_controller</code>，負責整體四連桿機構的控制與運作。</p>
-<p></p>
-<p></p>
-<p>心得:考試2不像考試1一樣需要在webots裡繪製零件，而是要在Solvespace繪製完零件在轉檔匯入webots內，因此操作上相對簡單很多，只需要調整一下參數即可，</p>
 </li>
-</ul><br />Exam1 << <a href='Exam1.html'>Previous</a> <a href='Exam3.html'>Next</a> >> Exam3</div>
+</ul>
+</ul>
+</ul>
+<p><strong><span style="color: #0000ff;"></span></strong></p>
+<p><strong><span style="color: #0000ff;">心得:</span></strong></p>
+<p><strong><span style="color: #0000ff;"></span></strong>考試2不像考試1一樣需要在webots裡繪製零件，而是要在Solvespace繪製完零件在轉檔匯入webots內，因此操作上相對簡單很多，只需要調整一下參數即可，</p><br />Exam1 << <a href='Exam1.html'>Previous</a> <a href='Exam3.html'>Next</a> >> Exam3</div>
         
     <!-- footer -->
       <div class="container">
