--- a/content/Exam3.html
+++ b/content/Exam3.html
@@ -146,14 +146,66 @@ img.add_border {
 <p>Exam3 (20%): Webots 機電模擬場景的協同設計</p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 Exam3 - 學員學號</p>
 <p></p>
-<p><span style="color: #0000ff;"><strong>Exam3-1</strong></span></p>
+<p><span style="color: #0000ff; background-color: #ffcc99;"><strong>Exam3-1</strong></span></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/DkAv1fRHwxs?si=G1q3qu-xlD_uNdxV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
+<p><span style="color: #0000ff;"><strong>操作步驟:</strong></span></p>
+<ol>
+<li>在控制台設定老師分發的<span>IPv6</span>網址</li>
+<li><span>關閉IPv4</span>網址</li>
+<li>以<span> webotsw --stream </span>啟動個人所完成的<span> HW1 </span>模擬系統</li>
+<li>查看各自<span>webots</span>的端口</li>
+<li>在網頁上輸入<span>http:[</span>自己的<span>IPv6</span>網址<span>]:</span>查看當下自己<span>webots</span>的端口<span>/index.html</span></li>
+<li>在<span>Connect to</span>內輸入<span>[</span>自己的<span>IPv6</span>網址<span>]: <span>查看當下自己</span></span><span>webots</span>的端口</li>
+<li>按下<span>Connect</span>即可看到自己<span>webots</span>的畫面</li>
+<li>按下<span>Disconnec</span></li>
+<li>到<span>Connect to</span>內輸入<span>[</span>組員的<span>IPv6</span>網址<span>]: </span>組員<span>webots</span>的端口(組員同時也需連線至各自的IPv6)，並依序查看各組員的檔案</li>
+</ol>
+<p></p>
+<p><strong><span style="color: #0000ff;">心得:</span></strong></p>
+<p><span style="color: #000000;">剛開始不太理解要怎麼跟組員做協同，也不知道該如何連到自己的網站，摸索了很久才終於連上自己的網站，之後就協助組員連上各自的IPv6，第一次連上的感覺很不可思議，也體驗到協同作業的特別之處。</span></p>
 <p><strong></strong></p>
-<p><span style="color: #0000ff;"><strong>Exam3-2</strong></span></p>
+<p><span style="color: #0000ff; background-color: #ffcc99;"><strong>Exam3-2</strong></span></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/nufCifoTWTU?si=M4hwbr8kT2ZLWqWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
+<p><span style="color: #0000ff;"><strong>操作步驟:</strong></span></p>
+<ol>
+<li>在控制台設定老師分發的<span>IPv6</span>網址</li>
+<li><span>關閉IPv4</span>網址</li>
+<li>下載老師的檔案</li>
+<li>以<span> webotsw --stream </span>開啟</li>
+<li>查看各自<span>webots</span>的端口</li>
+<li>在程式碼處修改成各自的學號</li>
+<li>在網頁上輸入<span>http:[</span>自己的<span>IPv6</span>網址<span>]:</span>查看當下自己<span>webots</span>的端口<span>/index.html</span></li>
+<li>在<span>Connect to</span>內輸入<span>[</span>自己的<span>IPv6</span>網址<span>]:<span> </span><span>查看當下自己</span></span><span>webots</span>的端口</li>
+<li>按下<span>Connect</span>即可看到自己<span>webots</span>的畫面</li>
+<li>按下<span>Disconnec</span></li>
+<li>到<span>Connect to</span>內輸入<span>[</span>組員的<span>IPv6</span>網址<span>]: </span>組員<span>webots</span>的端口(組員同時也需連線至各自的IPv6)，並依序查看各組員的檔案</li>
+</ol>
+<p><strong><span style="color: #0000ff;"></span></strong></p>
+<p><strong><span style="color: #0000ff;">心得:</span></strong></p>
+<p><span style="color: #000000;">跟上一個內容差不多，只是要將程式碼的數字改成自己的學號末3碼，如果會操作上一個考試內容的話，這個題目也能成順利完成。</span></p>
+<p></p>
 <p><strong></strong></p>
-<p><span style="color: #0000ff;"><strong>Exam3-3</strong></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/m7HNrprcxq8?si=ky4N4dpSgAe7nyAG" title="YouTube video player" width="560"></iframe></p><br />Exam2 << <a href='Exam2.html'>Previous</a> <a href='Final.html'>Next</a> >> Final</div>
+<p><span style="color: #0000ff; background-color: #ffcc99;"><strong>Exam3-3</strong></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/m7HNrprcxq8?si=ky4N4dpSgAe7nyAG" title="YouTube video player" width="560"></iframe></p>
+<p><span style="color: #0000ff;"><strong>操作步驟:</strong></span></p>
+<ol>
+<li>在控制台設定老師分發的<span>IPv6</span>網址</li>
+<li><span>關閉IPv4</span>網址</li>
+<li>輸入<span>pip</span>確認安裝正確的<span>python版本</span></li>
+<li><span>輸入指令"<span style="background-color: #ccffff;">set WEBOTS_HOME=y:\Webots_2025a</span>"</span></li>
+<li><span>輸入指令"<span style="background-color: #ccffff;">webots –stream</span>"</span></li>
+<li>執行指令"<span><span style="background-color: #ccffff;">pip install websocket-client websocket-server keyboard</span>"</span></li>
+<li>執行"<span style="background-color: #ccffff;">python youbot_cart_client.py"</span></li>
+<li>查看各自<span>webots</span>的端口</li>
+<li>在程式碼處修改成各自的學號</li>
+<li>在網頁上輸入<span>http:[</span>自己的<span>IPv6</span>網址<span>]:</span>查看當下自己<span>webots</span>的端口<span>/index.html</span></li>
+<li>在<span>Connect to</span>內輸入<span>[</span>組長的<span>IPv6</span>網址<span>]:<span> </span></span>組長<span>webots</span>的端口</li>
+<li>按下<span>Connect</span>即可看到組長<span>webots</span>的畫面</li>
+<li>按下上下左右建即可操控</li>
+</ol>
+<p><strong><span style="color: #0000ff;"></span></strong></p>
+<p><strong><span style="color: #0000ff;">心得:</span></strong></p>
+<p>這個題目相較於其他2題難度提高了不少，我們也是摸索很久，也求助於有相關經驗的學長才成功將這題做出來，不過這題的自由度相較於其他兩題來的高，如果成功用出來的話，成就感與可玩性也增加了不少。</p><br />Exam2 << <a href='Exam2.html'>Previous</a> <a href='Final.html'>Next</a> >> Final</div>
         
     <!-- footer -->
       <div class="container">
