--- a/config/content.htm
+++ b/config/content.htm
@@ -439,9 +439,8 @@ for i in range(1, 67):  # 1 到 66
 <p><a href="/downloads/HW2.zip" title="HW2連桿">HW2連桿.zip</a></p><h2>HW3</h2>
 <p>HW3 (20%):<span style="background-color: #ffff00;">建立 Webots 桌上籃球遊戲機模擬系統</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW3 - 41071203</p>
-<p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/MHmM-wHJuF8" title="國立虎尾科技大學 - 機械設計工程系 - cd2025 HW3 - 41071203" width="560"></iframe></p>
-<h1>Midterm</h1>
+<p><a href="/downloads/hw3.zip" title="HW3檔案">HW3檔案</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/MHmM-wHJuF8" title="國立虎尾科技大學 - 機械設計工程系 - cd2025 HW3 - 41071203" width="560"></iframe></p><h1>Midterm</h1>
 <p>本課程所繳交的期中成績為學員自評之學習期望成績.</p>
 <p>期中考週的自評期望成績繳交流程:</p>
 <ol>
