--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -669,6 +669,9 @@ for i in range(1, 67):  # 1 到 66
 <li>按下<span>Disconnec</span></li>
 <li>到<span>Connect to</span>內輸入<span>[</span>組員的<span>IPv6</span>網址<span>]: </span>組員<span>webots</span>的端口(組員同時也需連線至各自的IPv6)，並依序查看各組員的檔案</li>
 </ol>
+<p></p>
+<p><strong><span style="color: #0000ff;">心得:</span></strong></p>
+<p><span style="color: #000000;">剛開始不太理解要怎麼跟組員做協同，也不知道該如何連到自己的網站，摸索了很久才終於連上自己的網站，之後就協助組員連上各自的IPv6，第一次連上的感覺很不可思議，也體驗到協同作業的特別之處。</span></p>
 <p><strong></strong></p>
 <p><span style="color: #0000ff; background-color: #ffcc99;"><strong>Exam3-2</strong></span></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/nufCifoTWTU?si=M4hwbr8kT2ZLWqWb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></strong></p>
@@ -686,6 +689,10 @@ for i in range(1, 67):  # 1 到 66
 <li>按下<span>Disconnec</span></li>
 <li>到<span>Connect to</span>內輸入<span>[</span>組員的<span>IPv6</span>網址<span>]: </span>組員<span>webots</span>的端口(組員同時也需連線至各自的IPv6)，並依序查看各組員的檔案</li>
 </ol>
+<p><strong><span style="color: #0000ff;"></span></strong></p>
+<p><strong><span style="color: #0000ff;">心得:</span></strong></p>
+<p><span style="color: #000000;">跟上一個內容差不多，只是要將程式碼的數字改成自己的學號末3碼，如果會操作上一個考試內容的話，這個題目也能成順利完成。</span></p>
+<p></p>
 <p><strong></strong></p>
 <p><span style="color: #0000ff; background-color: #ffcc99;"><strong>Exam3-3</strong></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/m7HNrprcxq8?si=ky4N4dpSgAe7nyAG" title="YouTube video player" width="560"></iframe></p>
@@ -704,7 +711,10 @@ for i in range(1, 67):  # 1 到 66
 <li>在<span>Connect to</span>內輸入<span>[</span>組長的<span>IPv6</span>網址<span>]:<span> </span></span>組長<span>webots</span>的端口</li>
 <li>按下<span>Connect</span>即可看到組長<span>webots</span>的畫面</li>
 <li>按下上下左右建即可操控</li>
-</ol><h1>Final</h1>
+</ol>
+<p><strong><span style="color: #0000ff;"></span></strong></p>
+<p><strong><span style="color: #0000ff;">心得:</span></strong></p>
+<p>這個題目相較於其他2題難度提高了不少，我們也是摸索很久，也求助於有相關經驗的學長才成功將這題做出來，不過這題的自由度相較於其他兩題來的高，如果成功用出來的話，成就感與可玩性也增加了不少。</p><h1>Final</h1>
 <p><span>期末協同專案執行過程影片、簡報與 PDf 報告檔案 (六人一組) (30%)</span></p>
 <p><span>題目: <span style="background-color: #ccffcc;">Webots 動態投籃模擬系統的協同設計</span></span></p>
 <p><span>說明: </span></p>
