--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -617,7 +617,8 @@ for i in range(1, 67):  # 1 到 66
 <p><strong>4.控制器設定</strong></p>
 <ul>
 <li>設定 controller 為 .empty4</li>
-</ul><h2>HW3</h2>
+</ul>
+<p><strong><span style="color: #0000ff;">心得:</span></strong>跟作業一要做的東西差不多，也因為練習多了所以做的比較順了，但還是有那麼一點不熟練，還需要多加練習。</p><h2>HW3</h2>
 <p>HW3 (20%):<span style="background-color: #ffff00;">建立 Webots 桌上籃球遊戲機模擬系統</span></p>
 <p>操作影片標題: 國立虎尾科技大學 - 機械設計工程系 - cd2025 HW3 - 41071203</p>
 <p><a href="/downloads/hw3.zip" title="HW3檔案">HW3檔案</a></p>
@@ -902,7 +903,7 @@ for i in range(1, 67):  # 1 到 66
 <p style="padding-left: 30px;"><span>操作者可利用鍵盤特定按鍵控制投籃輪車的移動並發射投籃, 每投出一球後系統透過記分板進行計分, 並由送球機構進行補球或移動輪車取球, 遊戲可進行至全部數量籃球投完為止.</span></p>
 <p>請將期末協同專案執行過程、內容與心得, 製作成影片，配合字幕上傳至 Youtube 後嵌入各階段的期末報告頁面中.</p>
 <p>影片標題: <span style="background-color: #ffff00;">國立虎尾科技大學 - 機械設計工程系 - cd2025 期末報告 - 學員學號 - 各階段影片主題<br/></span></p>
-<h1>Brython</h1>
+<p><strong>檔案: </strong></p><h1>Brython</h1>
 <p><button id="add1to100">1 add to 100</button></p>
 <!-- 導入 brython 程式庫 -->
 <p>
