新增final製作過程

--- a/config/content.htm
+++ b/config/content.htm
@@ -905,7 +905,8 @@ for i in range(1, 67):  # 1 到 66
 <p>影片標題: <span style="background-color: #ffff00;">國立虎尾科技大學 - 機械設計工程系 - cd2025 期末報告 - 學員學號 - 各階段影片主題<br/></span></p>
 <p><strong></strong></p>
 <p><strong>檔案: <a href="/downloads/final.zip">final.zip</a></strong></p>
-<p></p>
+<p><strong>製作過程:</strong></p>
+<p>將HW3所做的籃球機裝到老師提供的車子模組上，裝之前要新增一塊板子才能順利安裝，之後套用老師提供的程式進行修改，WASD鍵是使籃框移動，上下左右鍵是操作籃球機移動，O鍵是產生一個靜止球，M可以讓球變成可擊出狀態並讓籃球機可以把球擊出，J鍵是讓籃球機回復初始狀態，之後在籃框設定紅線感測器，可以讓球經過籃框可以被偵測到，之後寫程式讓偵測到球投進籃框後可以同時計分，並在Webots命令列顯示得分，同時顯示在7段顯示器的記分板上。</p>
 <p><b>影片:</b></p>
 <p><b><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/-Mj8p8V0Ou8?si=p-69OLekNekxVYGa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></b></p>
 <p><b><iframe allowfullscreen="allowfullscreen" height="314" src='//www.youtube.com/embed/Kjox3aG2f2U?si=4phRIuonAh24Zm3C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen&gt;&lt;/iframe&gt;' width="560"></iframe></b></p>
